--- a/download.ipynb
+++ b/download.ipynb
@@ -9,12 +9,12 @@
    "source": [
     "from pymatgen.ext.matproj import MPRester\n",
     "\n",
-    "with MPRester(\"olRvFz7OOr5I9QmQg44w\") as m:\n",
+    "with MPRester(\"ONhmO4iEQzPj6KY6Mtb87H7GfztHM7JU\") as m:\n",
     "\n",
     "    # Structure for material id\n",
-    "    structure = m.get_structure_by_material_id(\"mp-672233\")\n",
+    "    structure = m.get_structure_by_material_id(\"mp-924130\")\n",
     "    \n",
-    "structure.to(filename=\"N2.cif\")"
+    "structure.to(filename=\"TiNiSn.cif\")"
    ]
   }
  ],
